# gtc25_shortest_hackathon

./: README.md  main.py  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
src/gtc25_shortest_hackathon/rag/: embeddings.py  ingestion.py  text_generation.py  vector_store.py
src/gtc25_shortest_hackathon/rag/chroma_langchain_db/: chroma.sqlite3
